Use Windows API generator