@@ -70,7 +70,7 @@ public abstract class EndpointOutputStream extends OutputStream {
 
         // use between 4 and 32 packets per transfer (256B to 2KB for FS, 2KB to 16KB for HS)
         var numPacketsPerTransfer = (int) Math.round(Math.sqrt((double) bufferSize / packetSize));
-        numPacketsPerTransfer = Math.min(Math.max(numPacketsPerTransfer, 4), 32);
+        numPacketsPerTransfer = Math.clamp(numPacketsPerTransfer, 4, 32);
         transferSize = numPacketsPerTransfer * packetSize;
 
         // use at least 2 outstanding transfers (3 in total)
@@ -234,7 +234,7 @@ public abstract class EndpointOutputStream extends OutputStream {
 
                 return transfer;
 
-            } catch (InterruptedException e) {
+            } catch (InterruptedException _) {
                 Thread.currentThread().interrupt();
             }
         }
